--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>dreamer game</title>
+<title>Hong Game</title>
 <style type="text/css">
 body,td,th {
 	font-size: 24px;
@@ -10,8 +10,6 @@ body,td,th {
 </style>
 </head>
 <body>
-<p>Dreamer Game</p>
-<p><img src="logo.jpg"/></p>
-<p>Email:coolxiaochuan@gmail.com</p>
+<p>Hong Game</p>
 </body>
 </html>
